--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<header>
-    <h1>GeekBrains SHOP</h1><button class="btn-cart" type="button">Корзина</button>
-</header>
-<main>
-    <div class="products"></div>
-</main>
+<div class="container">
+    <header>
+        <h1>GeekBrains SHOP</h1><button class="btn-cart" type="button">Корзина</button>
+    </header>
+    <main>
+        <div class="products"></div>
+    </main>
+</div>
 <script defer src="js/main.js"></script>
 </body>
 </html>
