задание 2, создал метод sum и сделал подсчет через for of

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
         <div class="products"></div>
+        <div class="sum"></div>
     </main>
 </div>
 <script defer src="js/main.js"></script>
