задание 3 создан объект для наглядности

--- a/_burger/burger.html
+++ b/_burger/burger.html
@@ -24,7 +24,8 @@
                     <p>Добавка:</p>
                     <input type="checkbox" id="seasoning" name="additive" value="seasoning" disabled>Приправа (15$, 0Ccal)<br>
                     <input type="checkbox" id="mayonnaise" name="additive" value="mayonnaise" disabled>Майонез (20$, 5Ccal)<br><br>
-                    <input type="button" id="complite" value="Заказать">&nbsp;<input type="reset" id="reset" value="Сбросить" disabled>
+                    <input type="button" id="complite" value="Заказать">&nbsp;
+<!--                    <input type="reset" id="reset" value="Сбросить" disabled>-->
                 </fieldset>
             </form>
         </div>
