4 сделаны все задания в примитивном варианте..

--- a/_parce/parce.hrml.html
+++ b/_parce/parce.hrml.html
@@ -3,12 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Parce</title>
+    <style>
+        .invalid {
+            border-color: red;
+        }
+        span {
+            color: red;
+            margin-left: 5px;
+        }
+
+    </style>
 </head>
 <body>
+
+<form action="#" method="post">
+    <fieldset>
+        <legend>Форма обратной связи</legend>
+        <div id="input-name"><input class="" type="text" id="name" placeholder="Ваше имя" ><span id="span-name"></span></div><br>
+        <div id="input-phone"><input class="" type="text" id="phone" placeholder="+7(000)000-0000" ><span id="span-phone"></span></div><br>
+            <div id="input-email"><input class="" type="email" id="email" placeholder="mymail@mail.ru" ><span id="span-email"></span></div><br>
+                <div id="input-message"><textarea class="" name="message" id="message" cols="30" rows="10" placeholder="Введите ваше сообщение" ></textarea></div><br>
+        <input type="submit" id="submit" value="Отправить">
+    </fieldset>
+</form>
+
 <script>
-    let textFirstWork =
+    // Первое задание
+    console.info('Первое задание');
+    const textFirstWork =
         `
-        One: 'Hi Mary.' Two: 'Oh, hi.'
+        One: 'Hi Mary.'
+        Two: 'Oh, hi.'
         One: 'How are you doing?'
         Two: 'I'm doing alright. How about you?'
         One: 'Not too bad. The weather is great isn't it?'
@@ -26,7 +51,81 @@
         One: 'Sure. Bye.'
         `;
 
-    console.log(textFirstWork);
+    const regexpFirstWork = /'/g;
+
+    console.log(
+        textFirstWork.replace(regexpFirstWork, '"')
+    );
+
+    // Второе задание
+    console.info('Второе задание');
+    const textSecondWork =
+        `
+        One: 'Hi Mary.'
+        Two: 'Oh, hi.'
+        One: 'How are you doing?'
+        Two: 'I'm doing alright. How about you?'
+        One: 'Not too bad. The weather is great isn't it?'
+        Two: 'Yes. It's absolutely beautiful today.'
+        One: 'I wish it was like this more frequently.'
+        Two: 'Me too.'
+        One: 'So where are you going now? '
+        Two: 'I'm going to meet a friend of mine at the department store.'
+        One: 'Going to do a little shopping?'
+        Two: 'Yeah, I have to buy some presents for my parents.'
+        One: 'What's the occasion?'
+        Two: 'It's their anniversary.'
+        One: 'That's great. Well, you better get going. You don't want to be late.'
+        Two: 'I'll see you next time.'
+        One: 'Sure. Bye.'
+        `;
+
+    const regexpSecondWork = /\B'/g;
+
+    console.log(
+        textSecondWork.replace(regexpSecondWork, '"')
+    );
+
+    // Третье задание
+
+    document.querySelector('#submit').addEventListener('click', (el) => {
+       el.preventDefault();
+       // проверка имени
+       let message = 'Введите корректное значение';
+       let $name = document.querySelector('#name');
+       let regexpName = /[0-9]/g;
+       if (regexpName.test($name.value)) {
+           $name.classList.add('invalid');
+           document.getElementById('span-name').textContent = message;
+       } else if (!$name.value) {
+           $name.classList.add('invalid');
+           document.getElementById('span-name').textContent = message;
+       } else {
+           $name.classList.remove('invalid');
+           document.getElementById('span-name').textContent = '';
+       }
+       // проверка телефона
+       let $phone = document.querySelector('#phone');
+       let regexpPhone = /\+7\(\d{3}\)\d{3}\-\d{4}\b/gm;
+       if (regexpPhone.test($phone.value)) {
+            $phone.classList.remove('invalid');
+           document.getElementById('span-phone').textContent = '';
+       } else {
+            $phone.classList.add('invalid');
+            document.getElementById('span-phone').textContent = message;
+       }
+       // проверка email
+       let $email = document.querySelector('#email');
+       let regexpEmail = /^([a-z0-9_\.-]+)@([a-z0-9_\.-]+)\.([a-z\.]{2,6})$/;
+       if (regexpEmail.test($email.value)) {
+           $email.classList.remove('invalid');
+           document.getElementById('span-email').textContent = '';
+       } else {
+           $email.classList.add('invalid');
+           document.getElementById('span-email').textContent = message;
+       }
+    });
+
 
 </script>
 </body>
