--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="logo">E-shop</div>
     <div class="cart">
         <form action="#" method="post" class="search-form">
-            <input type="text" class="search-field">
-            <button class="btn-search" type="submit">
+            <input type="text" class="search-field" v-model="inputSearch">
+            <button class="btn-search" type="submit" @click="filter($event)">
                 <i class="fas fa-search"></i>
             </button>
         </form>
