--- a/main_project_comp_full/index.html
+++ b/main_project_comp_full/index.html
@@ -19,11 +19,13 @@
     <products ref="products"></products>
 </main>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+<!--<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>-->
 <script src="js/ProductsComponent.js"></script>
 <script src="js/CartComponent.js"></script>
 <script src="js/searchComponent.js"></script>
+<script src="js/dataError.js"></script>
 <script defer src="js/main.js"></script>
 </body>
 </html>
