--- a/main_project_comp_full/index.html
+++ b/main_project_comp_full/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div id="app">
-<header>
+    <data-error ref="error"></data-error>
+    <header>
     <div class="logo">E-shop</div>
     <div class="cart">
         <search></search>
